fix: Remove search input border radius on Safari

--- a/lyah/assets/css/filter-form.css
+++ b/lyah/assets/css/filter-form.css
@@ -19,6 +19,7 @@
 	border-width: 1px;
 	border-style: solid;
 	border-color: var(--tertiary);
+	border-radius: 0;
 	background-color: transparent;
 	color: var(--text);
 	font-family: "PP Radio Grotesk", "Arial", sans-serif;
